src/App.css
/* ... */
/* Sidebar */
.Sidebar {
  width: 300px;
  min-width: 210px;
  height: 100%;
}

/* Main */
.Main {
  width: 100%;
  height: 100%;
  background-image: url("./images/bg.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  overflow-y: scroll;
}

/* User */
.User {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -ms-flex-pack: distribute;
      justify-content: space-around;
  padding: 1rem;
  border: 1px solid #ebebeb;
}

.User .logo img {
  width: 50px;
  transform: scale(2);
  
}

.User .info p {
  font-size: 1.1rem;
  font-weight: bold;
}

.User .info a {
  text-decoration: none;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
      -ms-flex-pack: end;
          justify-content: flex-end;
}

/* Modal */
.Modal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background: rgba(0, 0, 0, 0.8);
  z-index: 99;
}

.Modal .container {
  position: absolute;
  top: 25%;
  left: 50%;
  -webkit-transform: translate(-50%, -25%);
          transform: translate(-50%, -25%);
}

/* AddNewTodo */
.AddNewTodo {
  border-bottom: 1px solid #ebebeb;
}

.AddNewTodo .btn {
  padding: 1rem;
  width: 100%;
  height: 70px;
}

.AddNewTodo .btn button {
  width: 100%;
  height: 100%;
  border: none;
  border-radius: 3px;
  font-size: 1rem;
  background-color: #0080ff;
  color: white;
  font-weight: bold;
  cursor: pointer;
}

.AddNewTodo .btn button:hover {
  -webkit-filter: brightness(1.1);
          filter: brightness(1.1);
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
}

/* AddNewTodo form */
.TodoForm {
  padding: 1rem 1rem calc(1rem + 40px) 1rem;
  width: 100%;
  background: white;
  border-radius: 4px;
}

.TodoForm .text input {
  padding: 1rem;
  width: 100%;
  margin-bottom: 0.5rem;
  border: none;
  font-size: 1.2rem;
}

.TodoForm .text input:focus {
  outline: none;
  border-bottom: 1px solid #0080ff;
}

.TodoForm .remind {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  padding: 0.5rem;
}

.TodoForm p {
  margin-left: 10px;
}

.TodoForm .title {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  margin-bottom: 5px;
}

.TodoForm .pick-day {
  padding: 1.5rem 1.5rem 0 1.5rem;
}

.TodoForm .pick-time {
  padding: 1.5rem;
}

.TodoForm .pick-project {
  padding: 0.5rem;
}

.TodoForm .pick-project .projects {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  padding: 1rem 1rem 0 1rem;
}

.TodoForm .pick-project .projects .project {
  border: 1px solid #0080ff;
  border-radius: 5px;
  padding: 5px;
  margin: 5px;
  cursor: pointer;
}

.TodoForm .pick-project .projects .active {
  background: #0080ff;
  color: white;
}

.TodoForm .cancel {
  position: absolute;
  top: 0;
  right: 5px;
  cursor: pointer;
}

.TodoForm .confirm {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
}

.TodoForm .confirm button {
  width: 100%;
  height: 40px;
  background: #0080ff;
  color: white;
  font-size: 1.1rem;
  border: none;
  border-radius: 0 0 4px 4px;
  cursor: pointer;
}

/* Calendar */
.Calendar {
  padding: 1rem;
  border-bottom: 1px solid #ebebeb;
}

.Calendar .header {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.Calendar .header .title {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-flex: 1;
      -ms-flex: 1;
          flex: 1;
}

.Calendar .header .title p {
  margin-left: 5px;
  font-size: 1.1rem;
  font-weight: bold;
}

.Calendar .header .btns span {
  border-radius: 50%;
  cursor: pointer;
  width: 25px;
  height: 25px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.Calendar .header .btns span:hover {
  background-color: #ebebeb;
  -webkit-transition: background 300ms ease-in-out;
  transition: background 300ms ease-in-out;
}

.Calendar .items {
  padding: 0.5rem;
}

.Calendar .items .item {
  padding: 0.25rem;
  margin: 5px;
  font-size: 1rem;
  cursor: pointer;
}

/* Projects */
.Projects {
  padding: 1rem;
  border-bottom: 1px solid #ebebeb;
}

.Projects .header {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.Projects .header .title {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-flex: 1;
      -ms-flex: 1;
          flex: 1;
}

.Projects .header .title p {
  margin-left: 5px;
  font-size: 1.1rem;
  font-weight: bold;
}

.Projects .header .btns {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.Projects .header .btns span.edit {
  margin-right: 5px;
}

.Projects .header .btns span {
  border-radius: 50%;
  cursor: pointer;
  width: 25px;
  height: 25px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}
/* ... */

